welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: illegal start of simple expression
  for (i<-1 to (x-1))){
                     ^